--- a/ipfs/deploy/config/gateway-config.yml
+++ b/ipfs/deploy/config/gateway-config.yml
@@ -1,5 +1,5 @@
 ---
-ansible_ssh_private_key_file: <path to private key if needed>
+ansible_ssh_private_key_file: /Users/ambertho/.ssh/devops
 
 nginx_directory: /opt/nginx
 nginx_log_directory: /var/log/nginx
