--- a/messaging/deploy/messaging_server.yml
+++ b/messaging/deploy/messaging_server.yml
@@ -24,9 +24,4 @@
     - htpasswd
     - nginx
     - ipfs
-    # orbit?
-    # prometheus
-  post_tasks:
-    - name: Print IPFS peer ID
-      debug:
-        msg: "{{ inventory_hostname }} - {{ hostvars[inventory_hostname].ansible_hostname }}'s IPFS Peer ID: {{ ipfs_peer_id.stdout }}"
+    - orbit
