--- a/messaging/deploy/config/messaging-config.yml
+++ b/messaging/deploy/config/messaging-config.yml
@@ -7,14 +7,15 @@ nginx_access_log: /var/log/nginx/access.log
 nginx_error_log: /var/log/nginx/error.log
 nginx_ipfs_api_proxy_port: 5002
 # nginx_ipfs_gateway_proxy_port: 80 # not used for messaging
-nginx_ipfs_websocket_proxy_port: 9011
+nginx_ipfs_websocket_proxy_port: 443
 nginx_auth_user: <user>
 nginx_auth_password: <password>
 nginx_auth_file: /etc/nginx/.htpasswd
+nginx_server_name: <DNS or IP>
+nginx_ssl: <see SSL section of README>
 
 messaging_directory: /opt/orbit
-messaging_ipfs_auth_token: <http auth token>
-messaging_ipfs_url: http://127.0.0.1:5001
+messaging_ipfs_ws_address: /ip4/0.0.0.0/tcp/9012/ws
 messaging_rpc_server: https://mainnet.infura.io
 messaging_namespace: dev
 
