--- a/messaging/deploy/roles/ipfs/handlers/main.yml
+++ b/messaging/deploy/roles/ipfs/handlers/main.yml
@@ -1,6 +1,12 @@
 ---
-- name: restart ipfs service
+# running js-ipfs, so making sure go-ipfs is not running
+- name: stop ipfs service
   systemd:
-    state: restarted
+    state: stopped
     daemon_reload: yes
     name: ipfs
+# - name: restart ipfs service
+#   systemd:
+#     state: restarted
+#     daemon_reload: yes
+#     name: ipfs
