pinner integration (rinkeby)

--- a/ipfs/deploy/roles/pinner/tasks/main.yml
+++ b/ipfs/deploy/roles/pinner/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+
 - name: pinner directory
   file:
     path: "{{ ipfs_pinner_directory }}"
@@ -29,49 +30,84 @@
     dest: "{{ ipfs_pinner_directory }}"
     owner: ubuntu
     group: ubuntu
-    mode: 07  55
+    mode: 0755
   with_items:
-    - pinner/contract.py
-    - pinner/ipfs.py
     - pinner/ipfs_pinner.py
     - pinner/requirements.txt
 
-# - name: copy pinner config files to pinner config directory
-#   copy:
-#     src: "pinner/config/{{ item }}"
-#     dest: "{{ ipfs_pinner_directory }}/config"
-#     owner: ubuntu
-#     group: ubuntu
-#     mode: 0755
-#   with_items:
-#     - config_ropsten.json
-#     - config_rinkeby.json
+- name: copy pinner config files to pinner config directory
+  template:
+    src: "{{ item }}"
+    dest: "{{ ipfs_pinner_directory }}/config/"
+    owner: ubuntu
+    group: ubuntu
+    mode: 0755
+  with_items:
+    - config_ropsten.json
+    - config_rinkeby.json
 
-# AH: This will be replaced by event listener
-# - name: copy pinner contract files to pinner contract directory
-#   copy:
-#     src: "pinner/contracts/{{ item }}"
-#     dest: "{{ ipfs_pinner_directory }}/contracts"
-#     owner: ubuntu
-#     group: ubuntu
-#     mode: 0755
-#   with_items:
-#     - ListingsRegistry.json
+- name: copy pinner contract files to pinner contract directory
+  copy:
+    src: "pinner/contracts/{{ item }}"
+    dest: "{{ ipfs_pinner_directory }}/contracts"
+    owner: ubuntu
+    group: ubuntu
+    mode: 0755
+  with_items:
+    - ListingsRegistry.json
+    - UnitListing.json
 
-# - name: install requirements.txt
-#   pip:
-#     requirements: "{{ ipfs_pinner_directory }}/requirements.txt"
+- name: create virtualenv
+  command: "{{ python_exe }} -m venv ve"
+  args:
+    chdir: "{{ ipfs_pinner_directory }}"
 
-# TODO: make a non-ubuntu user to run pinner with
-# TODO: stagger / randomize cron runs
-# - name: set cronjobs to run pinners
-#   cron:
-#     name: "run pinner for config {{ item }}"
-#     minute: 0
-#     user: root
-#     job: "{{ ipfs_pinner_directory }}/ipfs_pinner.py -c {{ ipfs_pinner_directory }}/config/{{ item }}"
-#   with_items:
-#       - config_rinkeby.json
-#       - config_ropsten.json
+- name: activate virtualenv
+  shell: source ve/bin/activate
+  args:
+    chdir: "{{ ipfs_pinner_directory }}"
+    executable: /bin/bash
 
-# TODO: logging for pinner
+- name: install requirements.txt
+  pip:
+    requirements: "{{ ipfs_pinner_directory }}/requirements.txt"
+
+- name: pinner systemd unit file (rinkeby)
+  template:
+    src: pinner_rinkeby.service
+    dest: /etc/systemd/system/
+# - name: pinner systemd unit file (ropsten)
+#   template:
+#     src: pinner_ropsten.service
+#     dest: /etc/systemd/system/
+
+- name: systemd timers to run pinners (rinkeby)
+  template:
+    src: pinner_rinkeby.timer
+    dest: /etc/systemd/system/
+- name: systemd timers to run pinners (ropsten)
+  template:
+    src: pinner_ropsten.timer
+    dest: /etc/systemd/system/
+
+- name: enable pinner services
+  systemd:
+    name: "{{ item }}"
+    enabled: yes
+    masked: no
+  with_items:
+    - pinner_rinkeby.service
+    # - pinner_ropsten.service
+
+- name: enable pinner timers
+  systemd:
+    name: "{{ item }}"
+    state: started
+    enabled: yes
+  with_items:
+    - pinner_rinkeby.timer
+    # - pinner_ropsten.timer
+
+
+# systemd timer should enable service, provided it is named the same as the service
+# - name: enable pinner services
