install pinner requirements.txt in virtualenv

--- a/ipfs/deploy/roles/pinner/tasks/main.yml
+++ b/ipfs/deploy/roles/pinner/tasks/main.yml
@@ -71,6 +71,7 @@
 - name: install requirements.txt
   pip:
     requirements: "{{ ipfs_pinner_directory }}/requirements.txt"
+    virtualenv: "{{ ipfs_pinner_directory }}/ve"
 
 - name: pinner systemd unit file (rinkeby)
   template:
